--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>{{titleAbout}}</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Bootstrap icons-->
@@ -23,12 +23,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xxl-6">
                         <div class="text-center my-5">
-                            <h1 class="fw-bolder mb-3">Our mission is to make building websites easier for everyone.
+                            <h1 class="fw-bolder mb-3">{{strTitle}}
                             </h1>
-                            <p class="lead fw-normal text-muted mb-4">Start Bootstrap was built on the idea that
-                                quality, functional website templates and themes should be available to everyone. Use
-                                our open source, free products, or support us by purchasing one of our premium products
-                                or services.</p>
+                            <p class="lead fw-normal text-muted mb-4">{{strInfo}}</p>
                             <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
                         </div>
                     </div>
