--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -23,9 +23,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xxl-6">
                         <div class="text-center my-5">
-                            <h1 class="fw-bolder mb-3">{{strTitle}}
+                            <h1 class="fw-bolder mb-3">Creado por Usuarios, Para Usuarios: La Historia de Netflix
                             </h1>
-                            <p class="lead fw-normal text-muted mb-4">{{strInfo}}</p>
+                            <p class="lead fw-normal text-muted mb-4">Descubre la historia detrás de la plataforma que ha transformado la forma en que consumimos entretenimiento. Desde su fundación por Reed Hastings y Marc Randolph hasta su expansión global, exploraremos cómo Netflix ha mantenido su compromiso de ofrecer contenido diverso y de calidad.</p>
                             <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
                         </div>
                     </div>
