--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -26,7 +26,7 @@
                             <h1 class="fw-bolder mb-3">Creado por Usuarios, Para Usuarios: La Historia de Netflix
                             </h1>
                             <p class="lead fw-normal text-muted mb-4">Descubre la historia detrás de la plataforma que ha transformado la forma en que consumimos entretenimiento. Desde su fundación por Reed Hastings y Marc Randolph hasta su expansión global, exploraremos cómo Netflix ha mantenido su compromiso de ofrecer contenido diverso y de calidad.</p>
-                            <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
+                            <a class="btn btn-primary btn-lg" href="#scroll-target">Leer Historia</a>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                            src={{fotoFundadores}} alt="fotoFundadores" /></div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Our founding</h2>
                         <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
