--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -7,6 +7,27 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>a</title>
+    <style>
+        table {
+          width: 100%;
+          border-collapse: collapse;
+          margin-bottom: 20px;
+        }
+    
+        th, td {
+          border: 1px solid #E50914;
+          padding: 10px;
+          text-align: left;
+        }
+    
+        th {
+          background-color: #f2f2f2;
+        }
+    
+        tr:hover {
+          background-color: #f5f5f5;
+        }
+      </style>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Bootstrap icons-->
@@ -26,7 +47,7 @@
                             <h1 class="fw-bolder mb-3">Creado por Usuarios, Para Usuarios: La Historia de Netflix
                             </h1>
                             <p class="lead fw-normal text-muted mb-4">Descubre la historia detrás de la plataforma que ha transformado la forma en que consumimos entretenimiento. Desde su fundación por Reed Hastings y Marc Randolph hasta su expansión global, exploraremos cómo Netflix ha mantenido su compromiso de ofrecer contenido diverso y de calidad.</p>
-                            <a class="btn btn-primary btn-lg" href="#scroll-target">Leer Historia</a>
+                            <a class="btn btn-primary btn-lg" href="https://about.netflix.com/es_es">Leer Historia</a>
                         </div>
                     </div>
                 </div>
@@ -37,12 +58,13 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src={{fotoFundadores}} alt="fotoFundadores" /></div>
+                            src="assets/img/aboutFundadores.jpg"alt="fotoFundadores" /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">Our founding</h2>
-                        <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero
-                            molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                        <h2 class="fw-bolder">Netflix</h2>
+                        <p class="lead fw-normal text-muted mb-0">A Reed Hastings y Marc Randolph se les ocurre
+                             una idea para alquilar DVD por correo, 
+                            y para comprobar su viabilidad, prueban a enviarse un DVD a sí mismos.
+                             El disco llega intacto, y así nace la semilla de Netflix.</p>
                     </div>
                 </div>
             </div>
@@ -52,12 +74,12 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                            src="assets/img/streamAbout.jpeg" alt="stream" /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">Growth &amp; beyond</h2>
-                        <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero
-                            molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                        <h2 class="fw-bolder">¡Bienvenido a la historia de Netflix, donde la magia del streaming se encuentra con la comunidad de amantes del entretenimiento!</h2>
+                        <p class="lead fw-normal text-muted mb-0">"Creado por Usuarios, Para Usuarios" es más que una
+                             plataforma de entretenimiento; es una experiencia compartida que continúa conectando a
+                             millones de usuarios con historias emocionantes.</p>
                     </div>
                 </div>
             </div>
@@ -66,40 +88,24 @@
         <section class="py-5 bg-light">
             <div class="container px-5 my-5">
                 <div class="text-center">
-                    <h2 class="fw-bolder">Our team</h2>
-                    <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
+                    <h2 class="fw-bolder">Fundadores</h2>
+                    <p class="lead fw-normal text-muted mb-5"></p>
                 </div>
                 <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                            <h5 class="fw-bolder">Ibbie Eckart</h5>
-                            <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                src="assets/img/MarcRandolph.jpeg" alt="Marc Randolph" />
+                            <h5 class="fw-bolder">Marc Randolph</h5>
+                            <div class="fst-italic text-muted">Fundador &amp; CEO</div>
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                            <h5 class="fw-bolder">Arden Vasek</h5>
-                            <div class="fst-italic text-muted">CFO</div>
-                        </div>
-                    </div>
-                    <div class="col mb-5 mb-5 mb-sm-0">
-                        <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                            <h5 class="fw-bolder">Toribio Nerthus</h5>
-                            <div class="fst-italic text-muted">Operations Manager</div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4"
-                                src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                            <h5 class="fw-bolder">Malvina Cilla</h5>
-                            <div class="fst-italic text-muted">CTO</div>
+                                src="assets/img/ReedHastings.png" alt="Reed Hastings" />
+                            <h5 class="fw-bolder">Reed Hastings</h5>
+                            <div class="fst-italic text-muted">Co-Fundador</div>
                         </div>
                     </div>
                 </div>
