--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -20,7 +20,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2">Creado por Usuarios, Para Usuarios</h1>
-                                <p class="lead fw-normal text-white-50 mb-4"> Dame la informacion que debe ir en Acerca de Netflix</p>
+                                <p class="lead fw-normal text-white-50 mb-4"> Netflix</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Iniciar</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="#!">Leer más</a>
