--- a/src/app/pages/portfolio-overview/portfolio-overview.component.html
+++ b/src/app/pages/portfolio-overview/portfolio-overview.component.html
@@ -18,32 +18,32 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Our Work</h1>
+                        <h1 class="fw-bolder">Caracteristicas</h1>
                         <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
                     </div>
                     <div class="row gx-5">
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/img/admiperfiles.jpg" alt="Administrar Perfiles" />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Administrar Perfiles</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/img/perfilNinos.jpg" alt="Perfiles Niños" />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Perfiles Niños</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/img/disposi1.jpg" alt="Límite de Dispositivos" />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Límite de Dispositivos</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/img/categoria.jpg" alt="Varias Categorias" />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Varias Categorias</a>
                             </div>
                         </div>
                     </div>
