--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -7,27 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>a</title>
-    <style>
-        table {
-          width: 100%;
-          border-collapse: collapse;
-          margin-bottom: 20px;
-        }
-    
-        th, td {
-          border: 1px solid #E50914;
-          padding: 10px;
-          text-align: left;
-        }
-    
-        th {
-          background-color: #f2f2f2;
-        }
-    
-        tr:hover {
-          background-color: #f5f5f5;
-        }
-      </style>
+    <link rel="stylesheet" href="about.component.css">
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Bootstrap icons-->
