--- a/src/app/pages/portfolio-overview/portfolio-overview.component.html
+++ b/src/app/pages/portfolio-overview/portfolio-overview.component.html
@@ -36,7 +36,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/img/disposi1.jpg" alt="Límite de Dispositivos" />
+                                <img class="img-fluid rounded-3 mb-3" src="assets/img/disposi4.jpg" alt="Límite de Dispositivos" />
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Límite de Dispositivos</a>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-lg btn-primary" href="#!">Contact us</a>
+                    <a class="btn btn-lg btn-primary" href="https://netflix.com">Contact us</a>
                 </div>
             </section>
         </main>
