--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
-        <a class="navbar-brand" routerLink="/index"><img src="assets/img/NetflixLogo.png" width=10% height=10% alt="logo"></a>
+        <a class="navbar-brand" routerLink="/"><img src="assets/img/NetflixLogo.png" width=10% height=10% alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"> <a routerLink="/index" class="nav-item nav-link">Home</a></li>
+                <li class="nav-item"> <a routerLink="/" class="nav-item nav-link">Home</a></li>
                 <li class="nav-item"> <a routerLink="/about" class="nav-item nav-link">About</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/pricing">Pricing</a></li>
