--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<!-- Navigation-->
+<!-- Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
         <a class="navbar-brand" routerLink="/index"><img src="assets/img/NetflixLogo.png" width=10% height=10% alt="logo"></a>
