--- a/src/app/pages/portfolio-overview/portfolio-overview.component.html
+++ b/src/app/pages/portfolio-overview/portfolio-overview.component.html
@@ -1,46 +1,27 @@
-<!DOCTYPE html>
 <main class="flex-shrink-0">
-            
-            <!-- Page Content-->
-            <section class="py-5">
-                <div class="container px-5 my-5">
-                    <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Caracteristicas</h1>
-                        <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
-                    </div>
-                    <div class="row gx-5">
-                        <div class="col-lg-6">
-                            <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/img/admiperfiles.jpg" alt="Administrar Perfiles" />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Administrar Perfiles</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/img/perfilNinos.jpg" alt="Perfiles Niños" />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Perfiles Niños</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="position-relative mb-5 mb-lg-0">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/img/disposi4.jpg" alt="Límite de Dispositivos" />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Límite de Dispositivos</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="position-relative">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/img/categoria.jpg" alt="Varias Categorias" />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Varias Categorias</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="py-5 bg-light">
-                <div class="container px-5 my-5">
-                    <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-lg btn-primary" href="https://netflix.com">Contact us</a>
-                </div>
-            </section>
-        </main>
+    <!-- Page Content-->
+    <section class="py-5">
+      <div class="container px-5 my-5">
+        <div class="text-center mb-5">
+          <h1 class="fw-bolder">{{poTittle}}</h1>
+          <p class="lead fw-normal text-muted mb-0">{{subTittle}}</p>
+        </div>
+        <div class="row gx-5">
+          <div class="col-lg-6" *ngFor="let imgOver of imgOvers">
+            <div class="position-relative mb-5">
+              <img class="img-fluid rounded-3 mb-3" [src]="imgOver.imgSrc" [alt]="imgOver.altText" />
+              <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" [href]="imgOver.link">{{ imgOver.title }}</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="py-5 bg-light">
+      <div class="container px-5 my-5">
+        <h2 class="display-4 fw-bolder mb-4">{{tnet}}</h2>
+        <a class="btn btn-lg btn-primary" href="https://netflix.com">{{btnNetflix}}</a>
+      </div>
+    </section>
+  </main>
+  
 
