--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -77,6 +77,13 @@
             <!-- Tabla con datos -->
 
             <table>
+                <thead class="bg-light">
+                    <tr>
+                        <th>Título</th>
+                        <th>Actores</th>
+                        <th>Descripción</th>
+                    </tr>
+                </thead>
                 <tbody>
                     @for (datum of data; track datum) {
                     <tr>
