--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,19 +1,22 @@
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-  }
+    justify-content:space-between;
+    width: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 10px;
+}
 
-  th, td {
-    border: 1px solid #E50914;
+th, td {
+    border: 1px solid #000000;
     padding: 10px;
     text-align: left;
-  }
+}
 
-  th {
-    background-color: #f2f2f2;
-  }
+th {
+    color: #E50914 ;
+    background-color: #070505;
+}
 
-  tr:hover {
+tr:hover {
     background-color: #f5f5f5;
-  }
+}
