--- a/src/app/pages/portfolio-item/portfolio-item.component.html
+++ b/src/app/pages/portfolio-item/portfolio-item.component.html
@@ -6,22 +6,25 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <h1 class="fw-bolder">Project Title</h1>
-                                <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab similique, ducimus ut alias sit accusamus illum, asperiores deserunt dolorum quaerat qui! Ab, quisquam explicabo magni dolores unde beatae quam a.</p>
+                                <h1 class="fw-bolder">Mejores Producciones del 2023</h1>
+                                <p class="lead fw-normal text-muted mb-0">¿Buscas qué ver en Netflix? Estas son las 25 mejores películas 
+                                    exclusivas y originales que sólo podrás ver en el catálogo de Netflix.</p>
                             </div>
                         </div>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="assets/img/mj1.jpg" alt="mejores pelis" /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="assets/img/mj2.jpg" alt="Movie No mires Arriba" /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="assets/img/mj3.jpg" alt="Roma" /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
-                                <a class="text-decoration-none" href="#!">
-                                    View project
+                                <p class="lead fw-normal text-muted"> Desde emocionantes dramas que te mantendrán al borde del asiento hasta 
+                                    comedias que desatarán carcajadas sinceras, pasando por documentales fascinantes que te transportarán a 
+                                    mundos desconocidos, en Netflix encontrarás un abanico de opciones para cada estado de ánimo. </p>
+                                <a class="text-decoration-none" href="https://www.netflix.com/ec/browse/genre/34399">
+                                    Visitar Netflix
                                     <i class="bi-arrow-right"></i>
                                 </a>
                             </div>
