--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -36,9 +36,9 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="assets/img/streamAbout.jpeg" alt="stream" /></div>
+                            src="assets/img/streamAbout.png" alt="stream" /></div>
                     <div class="col-lg-6">
-                        <h2 class="fw-bolder">¡Bienvenido a la historia de Netflix, donde la magia del streaming se encuentra con la comunidad de amantes del entretenimiento!</h2>
+                        <h2 class="fw-bolder">¡Bienvenido a la historia de Netflix!</h2>
                         <p class="lead fw-normal text-muted mb-0">"Creado por Usuarios, Para Usuarios" es más que una
                              plataforma de entretenimiento; es una experiencia compartida que continúa conectando a
                              millones de usuarios con historias emocionantes.</p>
@@ -74,29 +74,42 @@
             </div>
         </section>
         <section>
-            <!-- Tabla con datos -->
 
-            <table>
-                <thead class="bg-light">
-                    <tr>
-                        <th>Título</th>
-                        <th>Actores</th>
-                        <th>Descripción</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @for (datum of data; track datum) {
-                    <tr>
-                        <th> {{  datum[ "title" ]  }}  </th>
-                        <td> {{  datum[ "date_added" ]  }}  </td>
-                        <td> {{  datum[ "description" ]  }} </td>
-                    </tr>
-                    } @empty {
-                    <tr>
-                        <td colspan="4" class="text-center">Aún no hay datos</td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
+            <div class="row row-cols-1 row-cols-md-1 g-3 mt-2">
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="text-center">
+                                <h2 class="fw-bolder">Tv Show and Movies </h2>
+                            </div>
+                            <table>
+                                <thead class="bg-light">
+                                    <tr>
+                                        <th>Título</th>
+                                        <th>Tipo</th>
+                                        <th>Fecha</th>
+                                        <th>Descripción</th>
+                
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (datum of data; track datum) {
+                                    <tr>      
+                                        <th> {{  datum[ "title" ]  }}  </th>
+                                        <td> {{  datum[ "type" ]  }} </td>
+                                        <td> {{  datum[ "date_added" ]  }}  </td>
+                                        <td> {{  datum[ "description" ]  }} </td>
+                                    </tr>
+                                    } @empty {
+                                    <tr>
+                                        <td colspan="4" class="text-center">Aún no hay datos</td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
