--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -11,9 +11,11 @@ table {
 }
 
 th, td {
-    border: 1px solid #000000;
+    border: 1px solid white;
     padding: 10px;
     text-align: left;
+    color: white     ;
+    background-color: #070505;
 }
 
 th {
