--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -9,7 +9,7 @@
                                 <p class="lead fw-normal text-white-50 mb-4"> Netflix</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Iniciar</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" routerLink="/about">Leer más</a>
+                                    <a class="btn btn-outline-light btn-lg px-4 link" href="/about">Leer más</a>
                                 </div>
                             </div>
                         </div>
