--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -8,8 +8,8 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">{{title}}</h1>
                                 <p class="lead fw-normal text-white-50 mb-4"> Netflix</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="mpa/browser/portfolio-overview">Iniciar</a>
-                                    <a class="btn btn-outline-light btn-lg px-4 link" href="mpa/browser/about">Leer más</a>
+                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="browser/portfolio-overview">Iniciar</a>
+                                    <a class="btn btn-outline-light btn-lg px-4 link" href="browser/about">Leer más</a>
                                 </div>
                             </div>
                         </div>
