--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -9,7 +9,7 @@
                                 <p class="lead fw-normal text-white-50 mb-4"> Netflix</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" routerLink="/portfolio-overview">Iniciar</a>
-                                    <a class="btn btn-outline-light btn-lg px-4 link" routerLink="/about">Leer más</a>
+                                    <a class="btn btn-outline-light btn-lg px-4" routerLink="/about">Leer más</a>
                                 </div>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Blog preview section-->
+            <!-- Sección de nuevas películas-->
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
